# doc-check

./: README.md  pyproject.toml
doc_check/: __init__.py  cli.py  constants.py  core.py  models.py  pricing.py  rag.py
doc_check/output/: __init__.py  base.py  cli.py  html.py  junit.py
doc_check/providers/: __init__.py  anthropic.py  ollama.py  openai.py
examples/: advanced-config.yaml  basic-config.yaml  jumpstarter-check.yaml  output2.md  result.html
tests/: __init__.py  conftest.py  test_provider_detection.py
